--- a/Workout/AndroidManifest.xml
+++ b/Workout/AndroidManifest.xml
@@ -34,6 +34,20 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <activity
+            android:name=".LogActivity"
+            android:label="@string/title_activity_log" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="LogActivity" />
+        </activity>
     </application>
 
 </manifest>
