Edited strings and MainActivity Added comments to strings for easier readability Made the settings button clickable, and it now starts the settingsactivity. Fixed some other stuff.

--- a/Workout/AndroidManifest.xml
+++ b/Workout/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Splash"
-            android:label="@string/splash" >
+            android:label="@string/title_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,14 +33,16 @@
         </activity>
         <activity
             android:name=".GuideActivity"
-            android:label="@string/title_activity_guide" >
+            android:label="@string/title_activity_guide"
+            android:icon="@drawable/topbaricon" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_log" >
+            android:label="@string/title_activity_settings"
+            android:icon="@drawable/topbaricon" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
