--- a/Workout/AndroidManifest.xml
+++ b/Workout/AndroidManifest.xml
@@ -47,6 +47,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <activity
+            android:name=".MediaCaptureActivity" >
+        </activity>
     </application>
 
 </manifest>
