--- a/Workout/AndroidManifest.xml
+++ b/Workout/AndroidManifest.xml
@@ -13,7 +13,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait" >
         <activity
             android:name=".Splash"
             android:label="@string/title_splash" >
@@ -52,6 +53,9 @@
         </activity>
         <activity
             android:name=".MediaCaptureActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
         </activity>
     </application>
 
