--- a/Workout/AndroidManifest.xml
+++ b/Workout/AndroidManifest.xml
@@ -13,11 +13,11 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".Splash"
-            android:label="@string/title_splash" >
+            android:label="@string/title_splash"
+        	android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +28,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:icon="@drawable/topbaricon" >
+            android:icon="@drawable/topbaricon"
+        	android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
 
@@ -38,7 +39,8 @@
         <activity
             android:name=".GuideActivity"
             android:label="@string/title_activity_guide"
-            android:icon="@drawable/topbaricon" >
+            android:icon="@drawable/topbaricon"
+        	android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -46,13 +48,15 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:icon="@drawable/topbaricon" >
+            android:icon="@drawable/topbaricon"
+        	android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
         <activity
-            android:name=".MediaCaptureActivity" >
+            android:name=".MediaCaptureActivity"
+        	android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
