--- a/Workout/AndroidManifest.xml
+++ b/Workout/AndroidManifest.xml
@@ -13,8 +13,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".Splash"
             android:label="@string/title_splash" >
